--- a/RedSocialRecetas/resources/sass/app.scss
+++ b/RedSocialRecetas/resources/sass/app.scss
@@ -1,1 +1,12 @@
-//
+// // Fonts
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+//uri fuentes de goiogle fonts
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
+@import 'recetas';
