--- a/RedSocialRecetas/resources/sass/_recetas.scss
+++ b/RedSocialRecetas/resources/sass/_recetas.scss
@@ -2,15 +2,22 @@ body {
     font-family: $parrafos-font-family;
 }
 
-trix-editor{
+trix-editor {
     min-height: 400px;
+    height: auto !important;
 }
-.bg-primary .navbar-brand{
-    color : white;
-    font-family : font-family-sans-serif;
+
+.bg-primary .navbar-brand {
+    color: white;
+    font-family: font-family-sans-serif;
     font-size: 2rem;
+
     &:hover {
-        color : white;
+        color: white;
     }
 
+}
+
+.icono {
+    width: 36px;
 }
