finalizacion del proyecto faltan ultimos detalles :D

--- a/RedSocialRecetas/public/css/app.css
+++ b/RedSocialRecetas/public/css/app.css
@@ -11027,8 +11027,7 @@ trix-editor {
 }
 
 .hero-categorias {
-  /* background-image: linear-gradient(to bottom, rgba(70, 70, 70, 0.4), rgba(53, 53, 53, 0.571)),
-      url('../images/bgimagen.jpg'); */
+  background-image: linear-gradient(to bottom, rgba(70, 70, 70, 0.4), rgba(53, 53, 53, 0.571)), url(/images/bgimagen.jpg?871145cd0e3ea995c42306a5378de821);
   height: 30rem;
   background-size: cover;
   background-position: top center;
