--- a/RedSocialRecetas/resources/sass/_recetas.scss
+++ b/RedSocialRecetas/resources/sass/_recetas.scss
@@ -134,6 +134,7 @@ trix-editor {
     height: 30rem;
     background-size: cover;
     background-position: top center;
+    margin-bottom: auto;
 
     .texto-buscar {
         p {
